[gd_scene load_steps=5 format=3 uid="uid://mdfm4dk4prlw"]

[ext_resource type="Script" uid="uid://nd8ouvh45ex5" path="res://Scenes/lo.gd" id="1_7irpa"]
[ext_resource type="Texture2D" uid="uid://bjc1v5upn7u6f" path="res://assets/art/background/log2.png" id="1_e3ksn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8g6f"]
size = Vector2(178, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhf16"]
size = Vector2(58, 62)

[node name="Log2" type="StaticBody2D"]
script = ExtResource("1_7irpa")
destruction_time = 15.0

[node name="Log1" type="Sprite2D" parent="."]
position = Vector2(1, -43)
texture = ExtResource("1_e3ksn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -41)
shape = SubResource("RectangleShape2D_o8g6f")

[node name="GooseDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GooseDetector"]
position = Vector2(-78, -25)
shape = SubResource("RectangleShape2D_bhf16")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GooseDetector"]
position = Vector2(78, -25)
shape = SubResource("RectangleShape2D_bhf16")

[node name="DestructionTimer" type="Timer" parent="."]

[connection signal="body_entered" from="GooseDetector" to="." method="_on_goose_detector_body_entered"]
[connection signal="body_exited" from="GooseDetector" to="." method="_on_goose_detector_body_exited"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_destruction_timer_timeout"]
